name:                stats-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dlorch/stats-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Lorch
maintainer:          dlorch@gmail.com
copyright:           Copyright (c) 2017 Daniel Lorch
category:            Statistics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable stats-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stats-haskell
  default-language:    Haskell2010

test-suite stats-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stats-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dlorch/stats-haskell
