name:                stats-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dlorch/stats-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Lorch
maintainer:          dlorch@gmail.com
copyright:           Copyright (c) 2017 Daniel Lorch
category:            Statistics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable stats-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       NSFG
                     , BabyBoom
                     , BRFSS
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Chart
                     , Chart-cairo
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dlorch/stats-haskell
